css/style.css
@font-face {
  font-family: "Montserrat-Bold";
  src: url("../fonts/Montserrat-Bold.woff") format("woff");
}

@font-face {
  font-family: "Montserrat-Black";
  src: url("../fonts/Montserrat-Black.woff") format("woff");
}

@font-face {
  font-family: "Roboto-Regular";
  src: url("../fonts/Roboto-Regular.woff") format("woff");
}

@font-face {
  font-family: "Roboto-Bold";
  src: url("../fonts/Roboto-Bold.woff") format("woff");
}

@font-face {
  font-family: "Evolventa";
  src: url("/fonts/Evolventa-Regular.woff") format("woff");
}

html,
body {
  height: 100%;
  font-family: "Roboto-Regular", sans-serif;
}

body {
  font-size: 16px;
  color: #ffffff;
  /* Allow for font scaling (also supported in IE) */
  /* font-size: calc(1vw + 1vh - 1vmin + 16px); */
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Montserrat-Bold", sans-serif;
}

#main {
  padding: 4vw 8vw 8vw 8vw;
  background-image: url(../svg/pattern-background.svg);
  background-repeat: repeat-y;
  background-size: 100% auto;
}

.navbar-custom {
  background-color: rgba(52, 58, 64, 0.7);
  padding: 0 6vw 0 6vw;
  backdrop-filter: saturate(180%) blur(10px);
}

.navbar-custom .nav-pills .nav-link {
  font-family: "Montserrat-Bold", sans-serif;
  font-size: 1em;
  color: #ffffff;
  transition: all 0.3s ease;
}

.navbar .nav-link:hover,
.navbar .nav-link:focus {
  background-color: rgba(255, 255, 255, 0.2);
}

.navbar .nav-link.active {
  background-color: #ffffff;
  color: #404040;
}

.navbar .dropdown-menu {
  overflow: auto;
  font-size: 1em;
}

.navbar .dropdown-lang {
  height: 60vh;
}

code {
  color: #fff;
  background: #2C5F83;
  padding: 3px;
  border-radius: 2px;
}

.md h1 {
  margin: 35px 0;
  text-align: center;
}

/* .navbar .dropdown-community a img {
  width: 2em;
} */
@media all and (max-width: 650px) {
  /* dropdown-menu-mobile-right */
  .dropdown-menu.show {
    right: unset;
  }
  .dropdown-menu-mobile-left {
    right: 0 !important;
  }
}
.navbar .dropdown-menu a:hover,
.navbar .dropdown-menu a.active {
  background-color: #e4e4e4;
}

.navbar .dropdown-item img {
  margin-right: 6px;
}

.navbar-brand {
  margin-right: 0px;
}

.home-title {
  font-family: "Montserrat-Black", sans-serif;
  font-size: 3em;
}

.home-image {
  width: 430px;
  max-width: 100%;
}

.home-subtitle {
  font-size: 1.2em;
  font-family: "Evolventa", sans-serif;
}

.btn {
  font-family: "Montserrat-Bold", sans-serif;
  font-size: 1em;
  padding: 0.4em 1.6em 0.4em 1.6em;
}

#main .section-cover {
  margin-top: 6em;
}

#main .section {
  margin: 4em 0 4em 0;
}

.section-title {
  font-size: 2em;
}

.section-body {
  font-size: 1em;
}

#floating-arrow {
  width: 3em;
  margin: 1em 0 4em 0;
}

.footer-custom {
  padding: 4em 6vw 4em 6vw;
}

.footer-custom h4 {
  font-size: 1.5em;
}

.footer-links {
  margin-bottom: 4vw;
}

.icon-social {
  width: 1.8em;
}

.downloads-notes-title,
.features-title {
  font-size: 2em;
  margin-bottom: 0.5em;
}

.card {
  border-radius: 0.8em;
}

.whitelinks a {
  color: #fff;
  text-decoration: underline;
  font-weight: bold;
}

.download-platform-name {
  font-size: 1.4em;
}

.download-notes {
  margin-top: 3em;
  margin-bottom: 4em;
}

.donation input,
.donation select {
  float: right;
  margin-right: 8px;
}

.sponsortitle b {
  font-size: 1.1em;
  padding: 2px 8px;
  border-radius: 4px;
}

.sponsor {
  width: 47%;
  max-width: 100%;
  float: left;
  background: rgba(255, 255, 255, 0.3);
  color: #444;
  border-radius: 3px;
  margin: 8px;
  padding: 8px;
}

.sponsor img {
  max-width: 64px;
  float: left;
  margin-right: 16px;
}

.sponsor .title {
  clear: right;
}

.gold .title {
  font-size: 1.3em;
}

.silver .title {
  font-size: 1.1em;
}

.silver img {
  display: none;
}

.sepainfo {
  margin-top: 24px;
}

.hidden {
  display: none;
}

.donation {
  margin: 16px 0 40px;
}

@media (min-width: 400px) {
  body {
    font-size: 18px;
  }

  #floating-arrow {
    width: 3em;
    margin: 2em 0 2em 0;
  }
}

@media (min-width: 576px) {
  body {
    font-size: 18px;
  }
}

@media (min-width: 768px) {
}

@media (min-width: 992px) {
  #main .section-cover {
    margin-top: 4em;
  }

  #main .section {
    margin: 6em 0 6em 0;
  }

  .navbar-custom .nav-pills .nav-link {
    font-size: 0.6em;
  }

  .navbar .dropdown-menu {
    font-size: 0.8em;
  }

  .btn {
    font-size: 0.8em;
  }
}

@media (min-width: 1200px) {
  body {
    font-size: 22px;
  }

  .navbar-custom .nav-pills .nav-link {
    font-size: 0.65em;
  }

  #main .section-cover {
    margin-top: 0;
  }

  #main .section {
    margin: 8em 0 8em 0;
  }

  .home-title {
    font-size: 3.6em;
  }

  .home-subtitle {
    font-size: 1.2em;
  }
}

@media (min-width: 1800px) {
  body {
    font-size: 28px;
  }

  .home-title {
    font-size: 4em;
  }

  .home-subtitle {
    font-size: 1.4em;
  }

  /* .btn {
    font-size: 1em;
  } */

  #floating-arrow {
    width: 2em;
    margin: 4em 0 4em 0;
  }

  .download-platform {
    max-width: 70vw;
  }
}

@media (min-width: 2400px) {
  body {
    font-size: 32px;
  }

  #main .section-cover {
    margin-top: 6em;
  }

  #main .section {
    margin: 10em 0 10em 0;
  }

  .download-platform {
    max-width: 60vw;
  }
}

@media (min-width: 3500px) {
  body {
    font-size: 40px;
  }

  .home-title {
    font-size: 6em;
  }

  .home-subtitle {
    font-size: 1.8em;
  }

  #main .section-cover {
    margin-top: 8em;
  }

  #main .section {
    margin: 12em 0 12em 0;
  }

  #floating-arrow {
    width: 4em;
    margin: 6em 0 6em 0;
  }

  .download-platform {
    max-width: 50vw;
  }
}

